5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1638_2450.log
== TEST (2019-04-09 10:43:31) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if ((n1 > n2).upper()):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((n1 > n2).upper()):
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:44:14) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if ((n1 > n2)):
	mensagem = print(n1.upper())
	print(n2)
else:
	mensagem = print(n2)
	print(n1.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:44:25) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if ((n1 > n2)):
	mensagem = print(n1.upper())
	print(n2)
else:
	mensagem = print(n2)
	print(n1.upper())
-- EXECUTION TIME:
0.117013
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:45:14) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1 > n2)):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:45:33) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1 > n2)):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
-- EXECUTION TIME:
0.152741
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:25) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1.upper()) > (n2.upper())):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = 
	
-- ERROR:
File "XXXX", line 8
    mensagem = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:48) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1.upper()) > (n2.upper())):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
	
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:04) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1.upper()) > (n2.upper())):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
	
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:50:06) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1.upper()) > (n2.upper())):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
	
-- EXECUTION TIME:
0.141968
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:50:09) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ")

if ((n1.upper()) > (n2.upper())):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
	
-- EXECUTION TIME:
0.228403
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:25) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ").upper()

if (n1 > n2):
	mensagem = print(n1).lower()
	print(n2)
else:
	mensagem = print(n2).lower
	print(n1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = print(n2).lower
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:51:38) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ").upper()

if (n1 > n2):
	mensagem = print(n1).lower()
	print(n2)
else:
	mensagem = print(n2).lower()
	print(n1)
	
-- EXECUTION TIME:
0.189344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2450/main.py", line 8, in <module>
    mensagem = print(n2).lower()
AttributeError: 'NoneType' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:40) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ").upper()

if (n1 > n2):
	mensagem = print(n1).lower()
	print(n2)
else:
	mensagem = print(n2).lower()
	print(n1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = print(n2).lower()
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:08) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ").upper()

if (n1 > n2):
	mensagem = print(n1.lower())
	print(n2)
else:
	mensagem = print(n2.lower())
	print(n1)
	
-- OUTPUT:
leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:52:17) 
-- CODE:
n1 = input("insira o nome1: ").upper()
n2 = input("insira o nome2: ").upper()

if (n1 > n2):
	mensagem = print(n1.lower())
	print(n2)
else:
	mensagem = print(n2.lower())
	print(n1)
	
-- EXECUTION TIME:
0.192301
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:51) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1 >= n2):
	mensagem = print(n1)
	print(n2)
else:
	mensagem = print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:52) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1 >= n2):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:20) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1 >= n2):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:02) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() >= n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:21) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() >= n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:35) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() > n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:04:54) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() > n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- EXECUTION TIME:
0.136391
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:44) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() > n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:08) 
-- CODE:
n1 = input("insira o nome1: ")
n2 = input("insira o nome2: ")

if (n1.upper() < n2.upper()):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
	
-- EXECUTION TIME:
0.145154
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
